--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ header-img: "img/about-bg.JPG"
 		repo: '{{site.gitalk.repo}}',
 		owner: '{{site.gitalk.owner}}',
 		admin: ['{{site.gitalk.admin}}'],
-		distractionFreeMode: {{site.gitalk.distractionFreeMode}},
+		distractionFreeMode: '{{site.gitalk.distractionFreeMode}}',
 		id: 'about',
 	});
 	gitalk.render('gitalk-container');
