--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "永远热烈，永远尽享欢愉。永远心跳，永远年少青春。"
-header-img: "img/about-bg.JPG"
+header-img: "img/about-bg.jpg"
 ---
 
 <div class="zh post-container">
