--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: TAGS
 layout: default
 description: "世界会慢慢清晰可见，我和我重新携手前行。"
-header-img: "img/tag-bg.PNG"
+header-img: "img/tag-bg.jpg"
 ---
 
 <!-- Page Header -->
